--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/websocket": "^1.0.11",
+    "adonis-mongoose-model": "^3.0.1",
+    "mongodb": "^3.3.0",
+    "pg": "^7.12.1"
   },
   "devDependencies": {},
   "autoload": {
